# src/main/java/com/gd/clinic/controller/AdminController.java
@@ -1,0 +1,16 @@
+package com.gd.clinic.controller;
+
+import com.gd.clinic.api.AdminApi;
+import com.gd.clinic.model.TreatmentDto;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.RestController;
+
+import java.util.List;
+
+@RestController
+public class AdminController implements AdminApi {
+    @Override
+    public ResponseEntity<List<TreatmentDto>> getAllTreatments() {
+        return null;
+    }
+}
